--- a/template/toc.xhtml
+++ b/template/toc.xhtml
@@ -3,15 +3,15 @@
 <head>
     <title>Contents</title>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/manuscript.css"/>
 </head>
 <body>
-<nav id="toc">
+<nav id="toc" epub:type="toc">
     <h1 class="chapter-title">
         Contents
     </h1>
-    <ul class="toc">
-    </ul>
+    <ol class="toc">
+    </ol>
 </nav>
 </body>
 </html>
