--- a/template/toc.xhtml
+++ b/template/toc.xhtml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en" lang="en">
 <head>
     <title>Contents</title>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" type="text/css" href="../css/manuscript.css"/>
 </head>
-<body>
+<body xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <nav id="toc" epub:type="toc">
     <h1 class="chapter-title">
         Contents
